--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,26 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-python3 -m compileall -f pyhal
+[tox]
+envlist = 3.9, 3.10, 3.11
+
+[testenv]
+basepython =
+  3.9: python3.9
+  3.10: python3.10
+  3.11: python3.11
+
+commands =
+  bash proto.sh
+  python -m compileall -f py_lab_hal
+  python --version
+  pytype --output=.pytype/{envname}
+
+usedevelop = True
+
+allowlist_externals =
+  /usr/bin/bash
+
+deps =
+  pytype
+  grpcio-tools
