--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ basepython =
 
 commands =
   bash proto.sh
+  pyink py_lab_hal
   python -m compileall -f py_lab_hal
   python --version
   pytype --output=.pytype/{envname}
@@ -35,3 +36,4 @@ allowlist_externals =
 deps =
   pytype
   grpcio-tools
+  pyink
