Fix pyproject.toml for install error
Change-Id: I55cdefdf88fff7df61ae0beb7f6a11ec5b658650
GitOrigin-RevId: b348ffebd19f9867d93eca8eeb87a2981e560227

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-py-modules = ['py_lab_hal']
+packages = ['py_lab_hal']
 
 [tool.pyink]
 pyink = true
